--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,7 @@
                 <p class="card-text"><small class="text-muted">Updated few mins ago.</small></p>
 
                 <div class="social-icons text-center">
-                <h2>Supported Games and Social Media Platforms</h2>
+                <h2>5. Supported Games and Social Media Platforms</h2>
 
         <!-- Supported Games Section -->
        
@@ -1139,7 +1139,7 @@
                 <h3>Instagram</h3>
             <!-- Add more social media platforms here -->
         </div>
-                <h2>5. History of PlayerUnknown's Battlegrounds (PUBG)</h2>
+                <h2>6. History of PlayerUnknown's Battlegrounds (PUBG)</h2>
                 <p class="pspace">
                     You might be familiar with the highly addictive multiplayer battle royale game within the gaming industry. PlayerUnknown's Battlegrounds (PUBG) has broken numerous records that were previously unchallenged. The
                     mastermind behind this game is an Irishman named Brendan Greene, who served as both the developer and designer.
@@ -1149,7 +1149,7 @@
                     acquisition of special weapons, clothing, skins, and, most importantly, distinct in-game names. A multitude of individuals is engaged in playing PUBG, all in search of the perfect moniker for their in-game characters.
                 </p>
 
-                <h2>6. PUBG Name Generator for Creating Stylish and Unique PUBG Usernames</h2>
+                <h2>7. PUBG Name Generator for Creating Stylish and Unique PUBG Usernames</h2>
                 <p class="pspace">
                     Are you facing difficulty in selecting a PUBG username? Worry not, as we have your back with an amazing PUBG Name Generator that is readily available for your use. This tool is highly appreciated for its ability to
                     generate stylish PUBG usernames. Many PUBG players employ this tool, incorporating various cool-looking symbols to create unique, trendy, and creative nicknames. Rest assured that all the characters produced by this tool
@@ -1159,7 +1159,7 @@
                     If you want to join pro gaming groups, picking the right name can be tough. Using a name like "KINGjohn" might not be the best in competitive tournaments. Why risk your gaming reputation when you can choose from a list of PUBG names below? If you want to personalize your in-game character, our Pubg Name Generator has new, awesome names that haven't become famous yet. Feel free to use our platform and get help from our resources.
                 </p>
 
-                <h2>7. Why Choose <a href="https://pubgfont.com/">Pubgfont.com</a> for Creating a Stylish PUBG Name with Stylish Fonts and Symbols</h2>
+                <h2>8. Why Choose <a href="https://pubgfont.com/">Pubgfont.com</a> for Creating a Stylish PUBG Name with Stylish Fonts and Symbols</h2>
                 <p class="pspace">
                     <a href="https://pubgfont.com/">Pubgfont.com</a> stands out as a superior tool for creating stylish names for PUBG because it offers a wide range of pre-generated stylish name fonts and symbols. With this tool, you can
                     create your unique name using a variety of text styles and symbols. These stylish symbols are essential if you want to enhance the attractiveness and style of your social media and gaming profiles. You can use this tool
@@ -1184,7 +1184,7 @@
                         These symbols can be easily copied and pasted into the PUBG rename field.
                     </p>
                     <!--       Added Card -->
-                    <h2>8. How to Generate a stylish name for PUBG?</h2>
+                    <h2>9. How to Generate a stylish name for PUBG?</h2>
                     <div class="card">
                         <a href="https://pubgfont.com/"><img src="pubgfont.jpeg" class="card-img-bottom" alt="pubgfont" /></a>
                         <div class="card-body">
@@ -1206,12 +1206,12 @@
                         </div>
                     </div>
                     <!--  Ended Card -->
-                    <h2>9. How to generate a stylish name for social media profiles?</h2>
+                    <h2>10. How to generate a stylish name for social media profiles?</h2>
                     <p class="pspace">
                         If you want a stylish name for your social media profile, just enter your name in the field below. This tool will give you different stylish name with emojis and symbols. Pick the font style you like, then click
                         'Copy' to get your stylish name with cool and unique text fonts.
                     </p>
-                    <h2>10. How to rename or change your name in PUBG Mobile?</h2>
+                    <h2>11. How to rename or change your name in PUBG Mobile?</h2>
                     <div class="card">
                         <a href="https://pubgfont.com/"><img src="how-to-change-name-pubg-mobile-guide.png" class="card-img-bottom" alt="how-to-change-name-pubg-mobile-guide" /></a>
                         <div class="card-body">
@@ -1225,13 +1225,13 @@
                             </ol>
                         </div>
                     </div>
-                    <h2>11. Can I use a stylish PUBG name on social media apps?</h2>
+                    <h2>12. Can I use a stylish PUBG name on social media apps?</h2>
                     <p class="pspace">
                         Absolutely Yes! The stylish name you create with this tool are also compatible for social media apps like Facebook, Instagram, TikTok and other social media apps. With
                         <a href="https://pubgfont.com/">pubgfont.com</a>, you can create a special and attractive username for all of your social media profiles. It is a popular tool for generating stylish name especially for PUBG. It has
                         lots of font styles for both social media and gaming. Many people have used this tool to create stylish profiles by mixing different fonts and symbols.
                     </p>
-                    <h2>12. Importance of stylish PUBG name in PUBG Game</h2>
+                    <h2>13. Importance of stylish PUBG name in PUBG Game</h2>
                     <p class="pspace">
                         PUBG has captured the hearts and minds of many, making it a wise choice to select a memorable and catchy name for your squad that evokes the era of PUBG whenever it comes to mind. You may have observed that some PUBG
                         mobile players incorporate fancy symbols into their names. Names like Gangster, Black Legit, Ghost, Devil, Abhi, Bad Boy, Beast, Deadshot, and Eagle are just a few examples.
