--- a/index.html
+++ b/index.html
@@ -119,18 +119,14 @@
             } */
             .bg-warning {
                 background: linear-gradient(90deg, #0072ff 0%, #00d4ff 100%);
-
-                /* background-image: linear-gradient(#163a38, blue); */
             }
 
             .navbar-light .navbar-nav .nav-link {
                 color: white;
             }
-
             .navbar-light .navbar-brand {
                 color: white;
             }
-
             .navbar-light .navbar-nav .nav-link.active {
                 color: white;
             }
@@ -910,7 +906,7 @@
                 <h2 class="text-center">1. How to use the PUBG Name Generator V6.0</h2>
                 <p>Simply follow the easy steps below to create a stylish PUBG name with your favorite stylish symbols using PUBG Name Generator V6.0.</p>
                 <ol style="padding: 10px;">
-                    <li>Enter your name in the Input Name Field below.</li>
+                    <li>Enter your name in the 'Input Name Field' below.</li>
                     <li>Click on your favorite 'Stylish Symbol' provided in the table below to copy it.</li>
                     <li>Click the 'Copy' button to copy your stylish PUBG name.</li>
                 </ol>
@@ -1117,8 +1113,8 @@
                 </div>
                 <p class="card-text"><small class="text-muted">Updated few mins ago.</small></p>
 
-                <div class="social-icons text-center">
                 <h2>5. Supported Games and Social Media Platforms</h2>
+                <div class="social-icons text-center">
 
         <!-- Supported Games Section -->
        
@@ -1141,27 +1137,20 @@
         </div>
                 <h2>6. History of PlayerUnknown's Battlegrounds (PUBG)</h2>
                 <p class="pspace">
-                    You might be familiar with the highly addictive multiplayer battle royale game within the gaming industry. PlayerUnknown's Battlegrounds (PUBG) has broken numerous records that were previously unchallenged. The
-                    mastermind behind this game is an Irishman named Brendan Greene, who served as both the developer and designer.
-                </p>
-                <p class="pspace">
-                    In order to establish an outstanding gaming identity, every player aspires to craft a unique and stylish persona. Each player desires to possess their very own distinctive identity, which can be achieved through the
-                    acquisition of special weapons, clothing, skins, and, most importantly, distinct in-game names. A multitude of individuals is engaged in playing PUBG, all in search of the perfect moniker for their in-game characters.
+                    You might have heard about highly addictive multiplayer battle royale game within the gaming industry. PlayerUnknown's Battlegrounds (PUBG) has broken many records that were previously unchallenged. This game was developed by an Irishman named Brendan Greene, who served as both the developer and designer.
                 </p>
 
-                <h2>7. PUBG Name Generator for Creating Stylish and Unique PUBG Usernames</h2>
+                <h2>7. Introducing the Pubg Name Generator - Create Cool and Unique PUBG Profiles</h2>
                 <p class="pspace">
-                    Are you facing difficulty in selecting a PUBG username? Worry not, as we have your back with an amazing PUBG Name Generator that is readily available for your use. This tool is highly appreciated for its ability to
-                    generate stylish PUBG usernames. Many PUBG players employ this tool, incorporating various cool-looking symbols to create unique, trendy, and creative nicknames. Rest assured that all the characters produced by this tool
-                    are fully compatible with PUBG Mobile.
+                    If you are struggling to choose a unique and stylish name for your PUBG profile, we have developed a helpful tool for you called the <a href="https://pubgfont.com">PUBG Name Generator</a>. This tool is quite popular and it helps players in making cool and special names for their PUBG profile by using cool symbols. Many PUBG players have used this tool to create creative and stylish nicknames.
                 </p>
                 <p class="pspace">
-                    If you want to join pro gaming groups, picking the right name can be tough. Using a name like "KINGjohn" might not be the best in competitive tournaments. Why risk your gaming reputation when you can choose from a list of PUBG names below? If you want to personalize your in-game character, our Pubg Name Generator has new, awesome names that haven't become famous yet. Feel free to use our platform and get help from our resources.
+                    If you want to join pro gaming groups, picking the right name can be tough. Using a name like 'KINGjohn' might not be the best in competitive tournaments. Why risk your gaming reputation when you can choose from a list of PUBG names below? If you want to personalize your in-game character, our Pubg Name Generator has new, awesome names that haven't become famous yet. Feel free to use our platform and get help from our resources.
                 </p>
 
                 <h2>8. Why Choose <a href="https://pubgfont.com/">Pubgfont.com</a> for Creating a Stylish PUBG Name with Stylish Fonts and Symbols</h2>
                 <p class="pspace">
-                    <a href="https://pubgfont.com/">Pubgfont.com</a> stands out as a superior tool for creating stylish names for PUBG because it offers a wide range of pre-generated stylish name fonts and symbols. With this tool, you can
+                    <a href="https://pubgfont.com/">Pubgfont.com</a> is a best tool to create stylish names for PUBG because it offers a wide range of pre-generated stylish name fonts and symbols. With this tool, you can
                     create your unique name using a variety of text styles and symbols. These stylish symbols are essential if you want to enhance the attractiveness and style of your social media and gaming profiles. You can use this tool
                     to create:
                 </p>
