--- a/index.html
+++ b/index.html
@@ -1177,7 +1177,7 @@
                     <!--       Added Card -->
                     <h2>9. How to Generate a stylish name for PUBG?</h2>
                     <div class="card">
-                        <a href="https://pubgfont.com/"><img src="pubgfont.jpeg" class="card-img-bottom" alt="pubgfont" /></a>
+                        <a href="https://pubgfont.com/"><img src="pubg-name-generator.jpeg" class="card-img-bottom" alt="pubgfont" /></a>
                         <div class="card-body">
                             <p class="pspace">
                                 Creating a unique and stylish PUBG name with pubgfont is really easy. Just type your name in the name field below or paste your name there, and our PUBG name generator will give you lots of unique and stylish
