--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
         <!-- Include Font Awesome CSS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
         <!-- Google AdSnese Tag -->
-        <meta name="google-adsense-account" content="ca-pub-5580564546196829">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5580564546196829"
-        crossorigin="anonymous"></script>
+
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-GGDCZGDZHH"></script>
         <script>
@@ -173,7 +171,7 @@
             <a href="https://pubgfont.com/" style="font-family: 'Bungee Spice', cursive;">PUBG Name Generator</a>
         </h1>
         <!-- ADDED CUSTOME STYLISH NAME CODE  -->
-        <div class="container">
+        <!-- <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-3">
                     <select id="text_first" class="form-control form-control-lg text-center">
@@ -313,7 +311,7 @@
             <p class="pspace">
                 Follow these easy steps to create a stylish PUBG name with your favorite symbols using the latest version of the PUBG Name Generator. We have also provided many pre-generated stylish fonts with emojis and symbols below ↓.
             </p>
-        </div>
+        </div> -->
         <!-- ENDED CUSTOM STYLISH NAME CODE -->
         <textarea
             type="text"
@@ -905,8 +903,8 @@
         <!--        Added FAQ's  -->
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h2 class="text-center">1. How to use the PUBG Name Generator V6.0</h2>
-                <p>Simply follow the easy steps below to create a stylish PUBG name with your favorite stylish symbols using PUBG Name Generator V6.0.</p>
+                <h2 class="text-center">1. How to use the PUBG Name Generator with a simple copy and paste?</h2>
+                <p>Follow the easy steps below to create a stylish PUBG name with your favorite stylish symbols using this PUBG Name Generator with a simple copy and paste.</p>
                 <ol style="padding: 10px;">
                     <li>Enter your name in the 'Input Name Field' below.</li>
                     <li>Click on your favorite 'Stylish Symbol' provided in the table below to copy it.</li>
@@ -996,7 +994,7 @@
                         </tbody>
                     </table>
                 </div>
-                <h2>2. Some Stylish PUBG Name Ideas:</h2>
+                <!-- <h2>2. Some Stylish PUBG Name Ideas:</h2>
                 <div class="table-responsive">
                     <table class="table table-bordered table-dark">
                         <tbody>
@@ -1065,8 +1063,8 @@
                             </tr>
                         </tbody>
                     </table>
-                </div>
-                <h2>4. Unique heart stylish symbols:</h2>
+                </div> -->
+                <!-- <h2>4. Unique heart stylish symbols:</h2>
                 <div class="table-responsive">
                     <table class="table table-bordered table-dark">
                         <tbody>
@@ -1113,7 +1111,7 @@
                         </tbody>
                     </table>
                 </div>
-                <p class="card-text"><small class="text-muted">Updated few mins ago.</small></p>
+                <p class="card-text"><small class="text-muted">Updated few mins ago.</small></p> -->
 
                 <h2>5. Supported Games and Social Media Platforms</h2>
                 <div class="social-icons text-center">
@@ -1153,11 +1151,10 @@
                 <h2>8. Why Choose <a href="https://pubgfont.com/">Pubgfont.com</a> for Creating a Stylish PUBG Name with Stylish Fonts and Symbols</h2>
                 <p class="pspace">
                     <a href="https://pubgfont.com/">Pubgfont.com</a> is a best tool to create stylish names for PUBG because it offers a wide range of pre-generated stylish name fonts and symbols. With this tool, you can
-                    create your unique name using a variety of text styles and symbols. These stylish symbols are essential if you want to enhance the attractiveness and style of your social media and gaming profiles. You can use this tool
-                    to create:
+                    create your unique name using a variety of text styles and symbols. These stylish symbols are essential if you want to enhance the attractiveness and style of your social media and gaming profiles.
                 </p>
 
-                <span class="badge badge-warning" style="color: #212529; background: #ffc107; padding: 4px; font-size: 20px;">#Keywords</span>
+                <!-- <span class="badge badge-warning" style="color: #212529; background: #ffc107; padding: 4px; font-size: 20px;">#Keywords</span>
                 <div>
                     <ul style="padding: 10px;">
                         <li>pubg stylish name</li>
@@ -1169,11 +1166,11 @@
                         <li>pubg name for boys</li>
                         <li>name generator for pubg</li>
                         <li>PUBG name for girls</li>
-                    </ul>
-                    <p class="pspace">
-                        In PUBG Mobile, not all special characters are supported, and only a limited subset of them is allowed. To address this, we've compiled a list of all the symbols and special characters that PUBG Mobile accommodates.
+                    </ul> -->
+                    <!-- <p class="pspace">
+                        In PUBG Mobile, not all special fonts are supported, only a limited fonts are allowed. To address this, we have compiled a list of all the symbols and special characters that PUBG Mobile accommodates.
                         These symbols can be easily copied and pasted into the PUBG rename field.
-                    </p>
+                    </p> -->
                     <!--       Added Card -->
                     <h2>9. How to Generate a stylish name for PUBG?</h2>
                     <div class="card">
