--- a/index.html
+++ b/index.html
@@ -323,7 +323,8 @@
             value=""
         ></textarea>
         <br />
-        <div id="result" style="margin: 5px;">
+        <div id="result" style="margin: -25px 5px 0px 5px;"> 
+            <!-- 5px changer to margin: -25px 5px 0px 5px; -->
             <div class="input-group mb-3">
                 <input type="text" class="form-control text-1" value="𝔓𝔯𝔢𝔳𝔦𝔢𝔴 𝔗𝔢𝔵𝔱" id="copy_0" readonly="readonly" />
                 <div class="input-group-append">
@@ -1113,7 +1114,7 @@
                 </div>
                 <p class="card-text"><small class="text-muted">Updated few mins ago.</small></p> -->
 
-                <h2>5. Supported Games and Social Media Platforms</h2>
+                <h2>2. Supported Games and Social Media Platforms</h2>
                 <div class="social-icons text-center">
 
         <!-- Supported Games Section -->
@@ -1135,12 +1136,12 @@
                 <h3>Instagram</h3>
             <!-- Add more social media platforms here -->
         </div>
-                <h2>6. History of PlayerUnknown's Battlegrounds (PUBG)</h2>
+                <h2>3. History of PlayerUnknown's Battlegrounds (PUBG)</h2>
                 <p class="pspace">
                     You might have heard about highly addictive multiplayer battle royale game within the gaming industry. PlayerUnknown's Battlegrounds (PUBG) has broken many records that were previously unchallenged. This game was developed by an Irishman named Brendan Greene, who served as both the developer and designer.
                 </p>
 
-                <h2>7. Introducing the Pubg Name Generator - Create Cool and Unique PUBG Profiles</h2>
+                <h2>4. Introducing the Pubg Name Generator - Create Cool and Unique PUBG Profiles</h2>
                 <p class="pspace">
                     If you are struggling to choose a unique and stylish name for your PUBG profile, we have developed a helpful tool for you called the <a href="https://pubgfont.com">PUBG Name Generator</a>. This tool is quite popular and it helps players in making cool and special names for their PUBG profile by using cool symbols. Many PUBG players have used this tool to create creative and stylish nicknames.
                 </p>
@@ -1148,7 +1149,7 @@
                     If you want to join pro gaming groups, picking the right name can be tough. Using a name like 'KINGjohn' might not be the best in competitive tournaments. Why risk your gaming reputation when you can choose from a list of PUBG names below? If you want to personalize your in-game character, our Pubg Name Generator has new, awesome names that haven't become famous yet. Feel free to use our platform and get help from our resources.
                 </p>
 
-                <h2>8. Why Choose <a href="https://pubgfont.com/">Pubgfont.com</a> for Creating a Stylish PUBG Name with Stylish Fonts and Symbols</h2>
+                <h2>5. Why Choose <a href="https://pubgfont.com/">Pubgfont.com</a> for Creating a Stylish PUBG Name with Stylish Fonts and Symbols</h2>
                 <p class="pspace">
                     <a href="https://pubgfont.com/">Pubgfont.com</a> is a best tool to create stylish names for PUBG because it offers a wide range of pre-generated stylish name fonts and symbols. With this tool, you can
                     create your unique name using a variety of text styles and symbols. These stylish symbols are essential if you want to enhance the attractiveness and style of your social media and gaming profiles.
@@ -1172,7 +1173,7 @@
                         These symbols can be easily copied and pasted into the PUBG rename field.
                     </p> -->
                     <!--       Added Card -->
-                    <h2>9. How to Generate a stylish name for PUBG?</h2>
+                    <h2>6. How to Generate a stylish name for PUBG?</h2>
                     <div class="card">
                         <a href="https://pubgfont.com/"><img src="pubg-name-generator.jpeg" class="card-img-bottom" alt="pubgfont" /></a>
                         <div class="card-body">
@@ -1194,7 +1195,7 @@
                         </div>
                     </div>
                     <!--  Ended Card -->
-                    <h2>10. How to generate a stylish name for social media profiles?</h2>
+                    <h2>7. How to generate a stylish name for social media profiles?</h2>
                     <p class="pspace">
                         If you want a stylish name for your social media profile, just enter your name in the field below. This tool will give you different stylish name with emojis and symbols. Pick the font style you like, then click
                         'Copy' to get your stylish name with cool and unique text fonts.
@@ -1213,13 +1214,13 @@
                             </ol>
                         </div>
                     </div>
-                    <h2>12. Can I use a stylish PUBG name on social media apps?</h2>
+                    <h2>8. Can I use a stylish PUBG name on social media apps?</h2>
                     <p class="pspace">
                         Absolutely Yes! The stylish name you create with this tool are also compatible for social media apps like Facebook, Instagram, TikTok and other social media apps. With
                         <a href="https://pubgfont.com/">pubgfont.com</a>, you can create a special and attractive username for all of your social media profiles. It is a popular tool for generating stylish name especially for PUBG. It has
                         lots of font styles for both social media and gaming. Many people have used this tool to create stylish profiles by mixing different fonts and symbols.
                     </p>
-                    <h2>13. Importance of stylish PUBG name in PUBG Game</h2>
+                    <h2>9. Importance of stylish PUBG name in PUBG Game</h2>
                     <p class="pspace">
                         PUBG has captured the hearts and minds of many, making it a wise choice to select a memorable and catchy name for your squad that evokes the era of PUBG whenever it comes to mind. You may have observed that some PUBG
                         mobile players incorporate fancy symbols into their names. Names like Gangster, Black Legit, Ghost, Devil, Abhi, Bad Boy, Beast, Deadshot, and Eagle are just a few examples.
