--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <a href="https://pubgfont.com/" style="font-family: 'Bungee Spice', cursive;">PUBG Name Generator</a>
         </h1>
         <!-- ADDED CUSTOME STYLISH NAME CODE  -->
-        <!-- <div class="container">
+        <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-3">
                     <select id="text_first" class="form-control form-control-lg text-center">
@@ -311,7 +311,7 @@
             <p class="pspace">
                 Follow these easy steps to create a stylish PUBG name with your favorite symbols using the latest version of the PUBG Name Generator. We have also provided many pre-generated stylish fonts with emojis and symbols below ↓.
             </p>
-        </div> -->
+        </div>
         <!-- ENDED CUSTOM STYLISH NAME CODE -->
         <textarea
             type="text"
