--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
                     </select>
                 </div>
             </div>
+            <hr>
             <div class="row" style="margin-bottom: 10px;">
                 <div class="col-md-6 offset-md-3 mt-3">
                     <input style="text-align: center; background-color: #dee2e6;" type="text" class="form-control form-control-lg" id="text_output" placeholder="Realtime Name Preview" readonly />
@@ -296,10 +297,10 @@
             </div>
             <div class="row">
                 <div class="col text-center">
-                    <h2 class="text-center"><strong>How to use the PUBG Name Generator Latest Version (V6.1)</strong></h2>
+                    <h2 class="text-center"><strong>How to use the PUBG Name Generator Latest Version</strong></h2>
                     <p class="pspace">
                         Generate a stylish PUBG name using your favorite stylish symbols with a simple copy and paste. All the names and symbols provided by this PUBG Name Generator are 100% compatible and acceptable in PUBG, as we have
-                        manually tested them. Here are some easy and simple steps to create a stylish name using the latest version (V6.1) of the PUBG Name Generator:
+                        manually tested them. Here are some easy and simple steps to create a stylish name using the latest version of the PUBG Name Generator:
                     </p>
                 </div>
             </div>
@@ -324,7 +325,7 @@
         ></textarea>
         <br />
         <div id="result" style="margin: -25px 5px 0px 5px;"> 
-            <!-- 5px changer to margin: -25px 5px 0px 5px; -->
+            <!-- margin 5px changed to margin: -25px 5px 0px 5px; -->
             <div class="input-group mb-3">
                 <input type="text" class="form-control text-1" value="𝔓𝔯𝔢𝔳𝔦𝔢𝔴 𝔗𝔢𝔵𝔱" id="copy_0" readonly="readonly" />
                 <div class="input-group-append">
