--- a/index.html
+++ b/index.html
@@ -1231,10 +1231,10 @@
                         game you're participating in creates a lasting and positive impression on others. While being a skilled player in any game is one thing, your PUBG username should be enticing, top-notch, epic, resonant, and
                         remarkable.
                     </p>
-                    <h3>Few Words from the Developer</h3>
+                    <h3>Few words from the developer</h3>
                     <p class="pspace">
                         We hope you are using this tool in your daily life to generate unique and stylish names for your gaming and social media profiles. If you encounter any difficulties or issues while accessing or using this tool,
-                        please feel free to contact us. We are committed to continuously improving this tool to provide you with high-quality content and a better user experience.
+                        please feel free to contact us. We are committed to continuously improving this tool to provide you with high-quality content and a better user experience under consideration of guidlines set by <a href="https://developers.google.com/search">Google Search Sonsole</a> and <a href="https://adsense.google.com">Google AdSense</a> program policies.
                     </p>
                     <p class="card-text"><small class="text-muted">Last updated a few minutes ago</small></p>
                     <hr />
