--- a/index.html
+++ b/index.html
@@ -1234,7 +1234,7 @@
                     <h3>Few words from the developer</h3>
                     <p class="pspace">
                         We hope you are using this tool in your daily life to generate unique and stylish names for your gaming and social media profiles. If you encounter any difficulties or issues while accessing or using this tool,
-                        please feel free to <a href="contact.html">contact us</a>. We are committed to continuously improving this tool to provide you with high-quality content and a better user experience under consideration of guidlines set by <a href="https://developers.google.com/search">Google Search Sonsole</a> and <a href="https://adsense.google.com">Google AdSense</a> program policies.
+                        please feel free to <a href="contact.html">contact us</a>. We are committed to continuously improving this tool to provide you with high-quality content and a better user experience under consideration of guidlines set by <a href="https://developers.google.com/search">Google Search Console</a> and <a href="https://adsense.google.com">Google AdSense</a> program policies.
                     </p>
                     <p class="card-text"><small class="text-muted">Last updated a few minutes ago</small></p>
                     <hr />
