--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>PUBG Name Generator | Stylish Name with Symbols 😍🔥</title>
-        <meta name="description" content="PUBG Name Generator is a tool that allows you to create stylish names for gaming and social media profiles for FREE - Simply Copy & Paste - Try it Now!" />
+        <meta name="description" content="PUBG Name Generator is a tool that allows you to create stylish names for gaming and social media profiles for FREE with a simple Copy & Paste - Try it Now!" />
         <meta
             name="keywords"
             content="PUBG name generator, Stylish PUBG name, Cool PUBG name, Unique PUBG name, Creative PUBG name, PUBG gamer name, Customized PUBG name, PUBG name ideas, Stylish symbols for PUBG name, Free PUBG name generator, Best PUBG name generator, PUBG name creator, PUBG username generator, Online gaming name, Trending PUBG name, Unique symbols for PUBG name, Top PUBG name, PUBG name suggestions, PUBG name inspiration, Stylish PUBG username ideas, Cool symbols for PUBG name, Customized PUBG username, PUBG nickname generator, Creative PUBG name generator, Best PUBG clan name, PUBG squad name, Gaming username ideas, Online game name."
