--- a/index.html
+++ b/index.html
@@ -1217,7 +1217,7 @@
                     </div>
                     <h2>9. Can I use a stylish PUBG name on social media apps?</h2>
                     <p class="pspace">
-                        Absolutely Yes! The stylish name you create with this tool are also compatible for social media apps like Facebook, Instagram, TikTok and other social media apps. With
+                        Yes, The stylish name you create with this tool are also compatible for social media apps like Facebook, Instagram, TikTok and other social media apps. With
                         <a href="https://pubgfont.com/">pubgfont.com</a>, you can create a special and attractive username for all of your social media profiles. It is a popular tool for generating stylish name especially for PUBG. It has
                         lots of font styles for both social media and gaming. Many people have used this tool to create stylish profiles by mixing different fonts and symbols.
                     </p>
@@ -1227,9 +1227,7 @@
                         mobile players incorporate fancy symbols into their names. Names like Gangster, Black Legit, Ghost, Devil, Abhi, Bad Boy, Beast, Deadshot, and Eagle are just a few examples.
                     </p>
                     <p class="pspace">
-                        A stylish and fashionable name has the power to attract other players in the battleground, bestowing upon them recognition and a well-established brand, much like Dynamo and Mortal. Having an appealing identity in a
-                        game you're participating in creates a lasting and positive impression on others. While being a skilled player in any game is one thing, your PUBG username should be enticing, top-notch, epic, resonant, and
-                        remarkable.
+                        A cool and attractie username can make other players notice you in a game, just like Dynamo and Mortal. Having a cool name in a game can make others remember you in a good way. Being good at a game is important, but your PUBG username should be stylish, unique and memorable.
                     </p>
                     <h3>Few words from the developer</h3>
                     <p class="pspace">
