--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>PUBG Name Generator | Stylish Name with Symbols 😍🔥</title>
+        <title>PUBG Name Generator | PUBG Stylish Fonts with Symbols 😍🔥</title>
         <meta name="description" content="PUBG Name Generator is a tool that allows you to create stylish names for gaming and social media profiles for FREE with a simple Copy & Paste - Try it Now!" />
         <meta
             name="keywords"
@@ -880,7 +880,7 @@
             style="display: flex; justify-content: center; align-items: center; padding: 5px;"
             class="a2a_kit a2a_kit_size_32 a2a_default_style"
             data-a2a-url="https://pubgfont.com/"
-            data-a2a-title="PUBG Name Generator | Stylish Name with Symbols 😍🔥"
+            data-a2a-title="PUBG Name Generator | PUBG Stylish Fonts with Symbols 😍🔥"
         >
             <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
             <a class="a2a_button_facebook"></a>
@@ -1234,7 +1234,7 @@
                     <h3>Few words from the developer</h3>
                     <p class="pspace">
                         We hope you are using this tool in your daily life to generate unique and stylish names for your gaming and social media profiles. If you encounter any difficulties or issues while accessing or using this tool,
-                        please feel free to <a href="contact.html">contact us</a>. We are committed to continuously improving this tool to provide you with high-quality content and a better user experience under consideration of guidlines set by <a href="https://developers.google.com/search">Google Search Console</a> and <a href="https://adsense.google.com">Google AdSense</a> program policies.
+                        please feel free to <a href="contact.html">contact us</a>. We will keep working on this tool to provide you with high-quality content and a better user experience by following guidelines set by <a href="https://developers.google.com/search">Google Search Console</a> and <a href="https://adsense.google.com">Google AdSense</a> program policies.
                     </p>
                     <p class="card-text"><small class="text-muted">Last updated a few minutes ago</small></p>
                     <hr />
