--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <a href="https://pubgfont.com/" style="font-family: 'Bungee Spice', cursive;">PUBG Name Generator</a>
         </h1>
         <!-- ADDED CUSTOME STYLISH NAME CODE  -->
-        <div class="container">
+        <!-- <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-3">
                     <select id="text_first" class="form-control form-control-lg text-center">
@@ -314,17 +314,18 @@
             <p class="pspace">
                 Follow these easy steps to create a stylish PUBG name with your favorite symbols using the latest version of the PUBG Name Generator. We have also provided many pre-generated stylish fonts with emojis and symbols below ↓.
             </p>
-        </div>
+        </div> -->
         <!-- ENDED CUSTOM STYLISH NAME CODE -->
         <textarea
             type="text"
             class="form-control fancytext"
-            style="width: 100%; resize: none; position: fixed; bottom: 0; z-index: 99; background: transparent; backdrop-filter: blur(20px); color: black;"
+            style="width: 100%; resize: none; position: fixed; bottom: 0; z-index: 99; background-color: #dee2e6; color: black;"
             required
             name="text"
             placeholder="Enter Your Name & Scroll Down ↓"
             value=""
         ></textarea>
+        <!-- backdrop-filter: blur(20px); -->
         <br />
         <div id="result" style="margin: -25px 5px 0px 5px;"> 
             <!-- margin 5px changed to margin: -25px 5px 0px 5px; -->
